# ai-accountability-agent

./: .env.example  .gitignore  README.md  ai-accountability-agent.service  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: feb5ee3ef5cf_initial_schema.py
config/: settings.py
docs/: DEPLOYMENT.md
src/: __init__.py  main.py
src/api/: auth.py  briefings.py  routes.py  tasks.py
src/integrations/: asana.py  google_auth.py  google_calendar.py  google_gmail.py  notion.py  slack.py  spark_email.py  twilio_sms.py
src/models/: __init__.py  database.py  integration.py  task.py  user.py
src/services/: ai_prioritization.py  asana_sync.py  briefing.py  entity_matcher.py  notion_sync.py  scheduler.py  twin_client.py
tests/: conftest.py  test_ai_service.py  test_api_health.py  test_asana_service.py  test_asana_sync.py  test_briefing_format.py  test_entity_matcher.py  test_models.py  test_notion_service.py  test_notion_sync.py  test_spark_email.py  test_twin_client.py
